# topics

./: .gitignore  README.md  compare_topics.py  compile.py  embed_and_cluster.py  evaluate_topics.py  explain_with_dt.py  extract_topics.py  pyproject.toml  readin.py  report.md  texts_fig.html  topics_env.yml  topics_fig.html  utils.py
data/: sentiment.pickle
outputs/: bitext_aov.txt  bitext_count_evals.tsv  bitext_count_evals_agg.tsv  bitext_count_topics.tsv  bitext_exact_appearance_means.csv  bitext_exact_appearance_tukey.txt  bitext_ols.txt  bitext_semantic_similarity_means.csv  bitext_semantic_similarity_tukey.txt  bitext_shared_vocabulary_means.csv  bitext_shared_vocabulary_tukey.txt  bitext_tfidf_evals.tsv  bitext_tfidf_evals_agg.tsv  bitext_tfidf_topics.tsv  bitext_use_evals.tsv  bitext_use_evals_agg.tsv  bitext_use_pytextrank_topics_fig.html  bitext_use_texts_fig.html  bitext_use_topics.tsv  news_long_aov.txt  news_long_count_evals_agg.tsv  news_long_exact_appearance_means.csv  news_long_exact_appearance_tukey.txt  news_long_ols.txt  news_long_semantic_similarity_means.csv  news_long_semantic_similarity_tukey.txt  news_long_shared_vocabulary_means.csv  news_long_shared_vocabulary_tukey.txt  news_long_tfidf_evals_agg.tsv  news_long_use_evals_agg.tsv  news_short_aov.txt  news_short_count_evals.tsv  news_short_count_evals_agg.tsv  news_short_count_topics.tsv  news_short_exact_appearance_means.csv  news_short_exact_appearance_tukey.txt  news_short_ols.txt  news_short_semantic_similarity_means.csv  news_short_semantic_similarity_tukey.txt  (+50 more)
