[project]
name = "topics"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "bokeh>=3.4.3",
    "more-itertools>=10.5.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pytextrank>=3.3.0",
    "scikit-learn>=1.5.2",
    "spacy>=3.8.2",
    "statsmodels>=0.14.4",
    "tensorflow-hub>=0.16.1",
    "tqdm>=4.66.6",
    "umap>=0.1.1",
    "yake>=0.4.8",
]
